// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shows error when context is missing 1`] = `
<div>
  <h1>
    Bad Times !
  </h1>
</div>
`;

exports[`shows game when loaded 1`] = `
<div>
  <h1>
    Bad Times !
  </h1>
</div>
`;

exports[`shows loading 1`] = `
<div>
  <h1>
    loading
  </h1>
</div>
`;
